[gd_scene load_steps=3 format=3 uid="uid://dry65metnlik8"]

[ext_resource type="Script" path="res://gui.gd" id="1_mhmv8"]
[ext_resource type="Texture2D" uid="uid://dyd4mr4wmhc6b" path="res://plus.png" id="3_6t5vf"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_mhmv8")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="SpriteScroll" type="ScrollContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SpriteSelection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/SpriteScroll"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/SpriteScroll/SpriteSelection"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "SpriteSheet Orientation:"
autowrap_mode = 3

[node name="Orientation" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/SpriteScroll/SpriteSelection"]
layout_mode = 2
size_flags_vertical = 0
item_count = 2
selected = 0
popup/item_0/text = "Vertical"
popup/item_0/id = 0
popup/item_1/text = "Horizontal"
popup/item_1/id = 1

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/SpriteScroll/SpriteSelection"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Sprites to Animate:"

[node name="DirectionsScroll" type="ScrollContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Directions" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/DirectionsScroll"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/DirectionsScroll/Directions"]
layout_mode = 2
text = "Directions"

[node name="Direction" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer/DirectionsScroll/Directions"]
layout_mode = 2
text = "N"
placeholder_text = "Direction"

[node name="Direction2" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer/DirectionsScroll/Directions"]
layout_mode = 2
text = "E"
placeholder_text = "Direction"

[node name="Direction3" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer/DirectionsScroll/Directions"]
layout_mode = 2
text = "S"
placeholder_text = "Direction"

[node name="Direction4" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer/DirectionsScroll/Directions"]
layout_mode = 2
text = "W"
placeholder_text = "Direction"

[node name="MoreDirections" type="TextureButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/DirectionsScroll/Directions"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("3_6t5vf")
texture_pressed = ExtResource("3_6t5vf")
texture_hover = ExtResource("3_6t5vf")
texture_focused = ExtResource("3_6t5vf")
ignore_texture_size = true
stretch_mode = 5

[node name="AnimationsScroll" type="ScrollContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Animations" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/AnimationsScroll"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/AnimationsScroll/Animations"]
layout_mode = 2
text = "Animations (in order)"

[node name="MoreAnimations" type="TextureButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/AnimationsScroll/Animations"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("3_6t5vf")
texture_pressed = ExtResource("3_6t5vf")
texture_hover = ExtResource("3_6t5vf")
texture_focused = ExtResource("3_6t5vf")
ignore_texture_size = true
stretch_mode = 5

[node name="Animate" type="Button" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Create Animations"
